--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "core-js": "^2.6.5",
     "vant": "^2.0.6",
+    "vee-validate": "^2.2.12",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
